--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ body {
   margin-bottom: 0rem;
 }
 
-#infoBox {
+.infoBox {
   color: white;
   border: 3px solid white;
   border-radius: 10px;
@@ -132,6 +132,6 @@ body {
 }
 
 .moon-image {
-  width: 15%;
+  width: 20%;
   height: 20%;
 }
