--- a/src/index.css
+++ b/src/index.css
@@ -51,8 +51,8 @@ body {
 }
 
 .planet {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   cursor: pointer;
 }
 
@@ -92,15 +92,15 @@ body {
 }
 
 .Mercury {
-
+  margin-left: 43%;
 }
 
 .Venus {
-  margin-left: -47%;
+  margin-left: -17%;
 }
 
 .Earth {
-  margin-left: -101%;
+  margin-left: -95%;
 }
 
 .Mars {
@@ -112,8 +112,8 @@ body {
 }
 
 .Saturn {
-  margin-left: -265%;
-  width:500px;
+  margin-left: -242%;
+  width:400px;
 }
 #Saturn {
   width:100% !important;
@@ -121,7 +121,7 @@ body {
 
 .Uranus {
   margin-left: -42%;
-  height:420px;
+  height:320px;
 }
 #Uranus {
   width:25% !important;
@@ -134,4 +134,6 @@ body {
 .moon-image {
   width: 20%;
   height: 20%;
+  max-height: 180px;
+  padding: 15px;
 }
